feat: openapi support
