# restful-api/src/main/kotlin/com/github/mantasjasikenas/routes/SectionRoutes.kt
@@ -3,16 +3,27 @@
 import com.github.mantasjasikenas.data.SectionRepository
 import com.github.mantasjasikenas.data.SectionRepositoryImpl
 import com.github.mantasjasikenas.model.PostSectionDto
+import com.github.mantasjasikenas.model.SectionDto
 import com.github.mantasjasikenas.model.UpdateSectionDto
+import io.github.tabilzad.ktor.annotations.KtorResponds
+import io.github.tabilzad.ktor.annotations.ResponseEntry
+import io.github.tabilzad.ktor.annotations.Tag
 import io.ktor.http.*
 import io.ktor.server.request.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
 
-fun Routing.sectionRoutes() {
+@Tag(["Sections"])
+fun Route.sectionRoutes() {
     val sectionRepository: SectionRepository = SectionRepositoryImpl()
 
     // TODO: move elsewhere
+    @KtorResponds(
+        [
+            ResponseEntry("201", Int::class, description = "Section created"),
+            ResponseEntry("400", String::class, description = "Bad request")
+        ]
+    )
     post("/projects/{projectId}/sections") {
         val projectId = call.parameters["id"]?.toInt()
 
@@ -27,13 +38,26 @@ fun Routing.sectionRoutes() {
         call.respond(HttpStatusCode.Created, id)
     }
 
+
     route("/sections") {
+        @KtorResponds(
+            [
+                ResponseEntry("200", PostSectionDto::class, true, description = "All sections")
+            ]
+        )
         get {
             val sections = sectionRepository.allSections()
 
             call.respond(sections)
         }
 
+        @KtorResponds(
+            [
+                ResponseEntry("200", PostSectionDto::class, description = "Section by id"),
+                ResponseEntry("400", String::class, description = "Bad request"),
+                ResponseEntry("404", String::class, description = "Not found")
+            ]
+        )
         get("/{id}") {
             val id = call.parameters["id"]?.toInt()
 
@@ -51,6 +75,13 @@ fun Routing.sectionRoutes() {
             }
         }
 
+        @KtorResponds(
+            [
+                ResponseEntry("200", SectionDto::class, description = "Section updated"),
+                ResponseEntry("400", String::class, description = "Bad request"),
+                ResponseEntry("404", String::class, description = "Not found")
+            ]
+        )
         put("/sections/{sectionId}") {
             val sectionId = call.parameters["sectionId"]?.toInt()
             val sectionDto = call.receive<UpdateSectionDto>()
@@ -60,11 +91,22 @@ fun Routing.sectionRoutes() {
                 return@put
             }
 
-            sectionRepository.updateSection(sectionId, sectionDto)
+            val updatedSection = sectionRepository.updateSection(sectionId, sectionDto)
 
-            call.respond(HttpStatusCode.OK)
+            if (updatedSection != null) {
+                call.respond(HttpStatusCode.OK, updatedSection)
+            } else {
+                call.respond(HttpStatusCode.NotFound)
+            }
         }
 
+        @KtorResponds(
+            [
+                ResponseEntry("204", String::class, description = "Section deleted"),
+                ResponseEntry("400", String::class, description = "Bad request"),
+                ResponseEntry("404", String::class, description = "Not found")
+            ]
+        )
         delete("/sections/{id}") {
             val id = call.parameters["id"]?.toInt()
 
@@ -73,10 +115,13 @@ fun Routing.sectionRoutes() {
                 return@delete
             }
 
-            sectionRepository.removeSection(id)
+            val removed = sectionRepository.removeSection(id)
 
-            call.respond(HttpStatusCode.OK)
+            if (removed) {
+                call.respond(HttpStatusCode.NoContent)
+            } else {
+                call.respond(HttpStatusCode.NotFound)
+            }
         }
     }
-
 }
