# restful-api/src/main/kotlin/com/github/mantasjasikenas/routes/TaskRoutes.kt
@@ -3,16 +3,27 @@
 import com.github.mantasjasikenas.data.TaskRepository
 import com.github.mantasjasikenas.data.TaskRepositoryImpl
 import com.github.mantasjasikenas.model.PostTaskDto
+import com.github.mantasjasikenas.model.TaskDto
 import com.github.mantasjasikenas.model.UpdateTaskDto
+import io.github.tabilzad.ktor.annotations.KtorResponds
+import io.github.tabilzad.ktor.annotations.ResponseEntry
+import io.github.tabilzad.ktor.annotations.Tag
 import io.ktor.http.*
 import io.ktor.server.request.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
 
-fun Routing.taskRoutes() {
+@Tag(["Tasks"])
+fun Route.taskRoutes() {
     val taskRepository: TaskRepository = TaskRepositoryImpl()
 
     // TODO: move elsewhere
+    @KtorResponds(
+        [
+            ResponseEntry("201", TaskDto::class, description = "Task created"),
+            ResponseEntry("400", String::class, description = "Bad request")
+        ]
+    )
     post("/sections/{sectionId}/tasks") {
         val sectionId = call.parameters["sectionId"]?.toInt()
 
@@ -22,18 +33,30 @@ fun Routing.taskRoutes() {
         }
 
         val taskDto = call.receive<PostTaskDto>()
-        val id = taskRepository.addTask(sectionId, taskDto)
+        val task = taskRepository.addTask(sectionId, taskDto)
 
-        call.respond(HttpStatusCode.Created, id)
+        call.respond(HttpStatusCode.Created, task)
     }
 
     route("/tasks") {
+        @KtorResponds(
+            [
+                ResponseEntry("200", TaskDto::class, true, description = "All tasks")
+            ]
+        )
         get {
             val tasks = taskRepository.allTasks()
 
             call.respond(tasks)
         }
 
+        @KtorResponds(
+            [
+                ResponseEntry("200", TaskDto::class, true, description = "Task by id"),
+                ResponseEntry("400", String::class, description = "Bad request"),
+                ResponseEntry("404", String::class, description = "Not found")
+            ]
+        )
         get("/{id}") {
             val id = call.parameters["id"]?.toInt()
 
@@ -51,6 +74,13 @@ fun Routing.taskRoutes() {
             }
         }
 
+        @KtorResponds(
+            [
+                ResponseEntry("200", TaskDto::class, description = "Task updated"),
+                ResponseEntry("400", String::class, description = "Bad request"),
+                ResponseEntry("404", String::class, description = "Not found")
+            ]
+        )
         put("/tasks/{id}") {
             val id = call.parameters["id"]?.toInt()
             val taskDto = call.receive<UpdateTaskDto>()
@@ -60,11 +90,22 @@ fun Routing.taskRoutes() {
                 return@put
             }
 
-            taskRepository.updateTask(id, taskDto)
+            val updatedTask = taskRepository.updateTask(id, taskDto)
 
-            call.respond(HttpStatusCode.OK)
+            if (updatedTask != null) {
+                call.respond(HttpStatusCode.OK, updatedTask)
+            } else {
+                call.respond(HttpStatusCode.NotFound)
+            }
         }
 
+        @KtorResponds(
+            [
+                ResponseEntry("200", String::class, description = "Task removed"),
+                ResponseEntry("404", String::class, description = "Not found"),
+                ResponseEntry("400", String::class, description = "Bad request")
+            ]
+        )
         delete("/tasks/{id}") {
             val id = call.parameters["id"]?.toInt()
 
@@ -73,9 +114,13 @@ fun Routing.taskRoutes() {
                 return@delete
             }
 
-            taskRepository.removeTask(id)
+            val removed = taskRepository.removeTask(id)
 
-            call.respond(HttpStatusCode.OK)
+            if (removed) {
+                call.respond(HttpStatusCode.OK)
+            } else {
+                call.respond(HttpStatusCode.NotFound)
+            }
         }
     }
 
